tests/suite/fail/generated/borrow/fail_move_consume_text.ny
fn consume(x: string) -> void { print(x) }
fn main() {
    let text = "hello"
    consume(text)
    print(text) //~ ERROR was moved
}
